Make milestone gating deterministic via control file

--- a/in/in-15.md
+++ b/in/in-15.md
@@ -37,8 +37,8 @@ This matches the plan's "acceptance gates" directly.
 ## 3) VS Code integration (single toggle, Option A)
 
 VS Code's Testing panel only shows what pytest discovers. We make milestone
-selection deterministic by feeding pytest a milestone-specific config and
-reading the milestone from an env file.
+selection deterministic by setting the milestone in an env file that the
+pytest gate reads during discovery.
 
 Workflow:
 
@@ -56,9 +56,11 @@ PRISM_MILESTONE=m2
 
 Under the hood:
 
-- `python.testing.pytestArgs` uses:
-  `-c pytest.${env:PRISM_MILESTONE}.ini`
+- `python.testing.pytestArgs` uses the default `pytest.ini`
 - `python.testing.envFile` points at `.vscode/pytest.env`
+- `conftest.py` reads `PRISM_MILESTONE` and skips tests above that milestone
+- If the env is not propagated by the IDE, `conftest.py` falls back to reading
+  `.pytest-milestone` (one token like `m2`) or `.vscode/pytest.env`.
 
 This makes VS Code's test list mirror the milestone gate, without a manual
 command line step.
