Annotate in-* notes and refresh audit

--- a/in/in-10.md
+++ b/in/in-10.md
@@ -1,3 +1,5 @@
+NOTE: CONSOLIDATED by in-13.md; CD coordinates are made self-hosted in in-11.md.
+
 Perfect. Here is a **clean, engineering-grade technical diff** you can use as a milestone definition. It is written so that:
 
 * it is **formally precise** (no philosophy required to parse it),
