--- a/in/in-12.md
+++ b/in/in-12.md
@@ -1,3 +1,5 @@
+NOTE: CONSOLIDATED by in-13.md; univalence contract formalized in IMPLEMENTATION_PLAN.md.
+
 Yes—event sourcing + CQRS is basically the *right mental model* for “strong canonicality without ambiguity,” and it also explains why the vtable analogy is so apt.
 
 ### The core translation
