--- a/in/in-13.md
+++ b/in/in-13.md
@@ -1,3 +1,5 @@
+NOTE: REFINED by in-14.md and IMPLEMENTATION_PLAN.md; this doc remains the consolidation rationale.
+
 Here’s the reconciliation: **in-10 defines the milestone delta**, **in-11 makes the delta “self-hosting” by turning coordinates into IR objects**, and **in-12 supplies the *systems* pattern that guarantees univalence (canonicality without ambiguity) even under collisions**. Together they form one coherent architecture.
 
 ---
