--- a/in/in-15.md
+++ b/in/in-15.md
@@ -1,3 +1,5 @@
+NOTE: Implemented via tests/conftest.py and documented in IMPLEMENTATION_PLAN.md; this note records the workflow.
+
 This note formalizes **milestone-gated testing** and the **VS Code workflow**
 for selecting a milestone in the Testing panel. It complements the acceptance
 gates in the implementation plan by making the gate mechanical and repeatable.
