Add pre-step immutability contract and test

--- a/in/in-19.md
+++ b/in/in-19.md
@@ -126,7 +126,26 @@ Because Prism semantics enforce univalence and GF(2) cancellation, the topos (\m
 
 ---
 
-## 6. Relationship to Min(Prism)
+## 6. Frozen Read-Model Corollary (Hyperstrata Collapse)
+
+The hyperstrata order yields a visibility rule: candidate emission at `(s,t)`
+may read only from the filtered ledger `L_{s,t-1}` (or `L_{s-1,t_max}` when
+`t = 0`). Pre-step rows are immutable and live in `L_{-1}`.
+
+Define a cycle-collapsing projection:
+
+```
+π_cycle : (s,t) ↦ s
+```
+
+If the micro-strata axis is degenerate (`T = {0}`), the visibility rule reduces
+to a frozen read model per cycle: each stratum reads only the pre-step ledger
+plus prior strata, and never sees rows created in the same stratum.
+
+Thus "single frozen read model per cycle" is a corollary of the hyperstrata
+site under collapse of the second coordinate.
+
+## 7. Relationship to Min(Prism)
 
 For fixed bounds `(K,d,T)`, the restriction of (C) to those bounds yields a **finite site**.
 
