Promote hyperstrata to m3 in docs

--- a/in/in-19.md
+++ b/in/in-19.md
@@ -4,6 +4,8 @@
 >
 > **Audience:** Prism core developers, semantics reviewers
 >
+> **Milestone:** m3 (hyperstrata visibility rule is normative)
+>
 > **Prereqs:** `in-16.md`, `in-17.md`, `in-18.md`, `in/glossary.md`
 
 ---
@@ -12,7 +14,7 @@
 
 This document specifies the **site** ((C,J)) whose category of sheaves constitutes the Prism semantic universe. It makes explicit the staging contexts, morphisms, and coverage conditions that justify interpreting the Arena as a presheaf topos and the Ledger as a sheaf object.
 
-This note introduces **no new semantics**. It formalizes structure already implicit in the Arena/`q`/Ledger architecture.
+This note introduces **no new semantics**. It formalizes structure already implicit in the Arena/`q`/Ledger architecture and makes the hyperstrata visibility rule explicit for m3.
 
 ---
 
