Add Min(Prism) projection commutation harness

--- a/in/in-18.md
+++ b/in/in-18.md
@@ -274,7 +274,18 @@ This closes the loop between design, implementation, and proof.
 
 ## Appendix C — Min(Prism) Test Harness Sketch
 
-[unchanged from previous revision]
+Current harness entry points (m3):
+
+- `tests/min_prism/harness.py`
+  - `canon_state_ledger`: structural-key canonicalization (order-erasing).
+  - `project_ledger`: canonical-order projection with dependency closure.
+- `tests/min_prism/test_projection_commutes.py`
+  - `test_projection_commutes_cycle_intrinsic`
+  - `test_projection_commutes_cycle_candidates`
+
+These tests instantiate the D.5.O commutation check on small CNF-2 traces and
+verify that projection erases unrelated tail nodes without changing reachable
+semantics.
 
 ---
 
@@ -524,4 +535,3 @@ Failure of this test indicates **semantic leakage**: some behavior in the large 
 ---
 
 **End of in-18.md**
-
