Add Min(Prism) projection invariants

--- a/in/in-18.md
+++ b/in/in-18.md
@@ -282,6 +282,9 @@ Current harness entry points (m3):
 - `tests/min_prism/test_projection_commutes.py`
   - `test_projection_commutes_cycle_intrinsic`
   - `test_projection_commutes_cycle_candidates`
+- `tests/min_prism/test_projection_invariants.py`
+  - `test_project_ledger_closure_keeps_dependencies`
+  - `test_project_ledger_idempotent`
 
 These tests instantiate the D.5.O commutation check on small CNF-2 traces and
 verify that projection erases unrelated tail nodes without changing reachable
