Align in-27 with BSPˢ glossary and refresh audits

--- a/in/in-17.md
+++ b/in/in-17.md
@@ -128,6 +128,12 @@ Under CNF-2 and 2:1 tiling, the damage set per cycle is proportional to tile *pe
 
 This is the Hashlife lineage made explicit.
 
+**Note (m5 transition)**
+`in-27` replaces the linear tile-boundary damage metric with a spectral Hamming
+entropy model (MSB(A ⊕ B)) and an on-device servo mask. The m4 definition above
+remains valid as a legacy locality signal; both are performance-only and erased
+by `q`.
+
 ---
 
 ## 3. BSP, Sorting, and Locality (Polysemy Resolved)
