--- a/in/in-26.md
+++ b/in/in-26.md
@@ -36,7 +36,7 @@ kernel:
 * Sigma (finite signature, arity <= 2)
 * canonical keys and univalence
 * q as a quotient / normalization
-* BSP^s as an equivalence relation
+* BSPˢ as an equivalence relation
 * canonical novelty as a monotone
 * finite semantic closure (Min(Prism))
 
@@ -112,15 +112,15 @@ Why:
 These are the non-negotiable proofs. If you prove only these, Prism already
 stands on solid ground.
 
-### 2.1 BSP^s Is a Gauge Symmetry
+### 2.1 BSPˢ Is a Gauge Symmetry
 
-Formalize BSP^s as an equivalence relation on Arena states and prove it is
+Formalize BSPˢ as an equivalence relation on Arena states and prove it is
 erased by q.
 
 Agda shape:
 
 ```agda
-_≈ˢ_ : Arena -> Arena -> Set  -- BSP^s equivalence
+_≈ˢ_ : Arena -> Arena -> Set  -- BSPˢ equivalence
 
 q-invariant :
   forall {A A'} ->
@@ -348,7 +348,7 @@ Prism/
   Signature.agda          -- Sigma, arity, finiteness
   Key.agda                -- canonical semantic objects
   Univalence.agda         -- identity = equality
-  Gauge.agda              -- BSP^s equivalence, q-invariance
+  Gauge.agda              -- BSPˢ equivalence, q-invariance
   Novelty.agda            -- monotone, saturation
   FixedPoint.agda         -- representation stabilization
   MinPrism.agda           -- finite state space
@@ -364,7 +364,7 @@ Each file should be under 300 lines if done right.
 If you prove only five things in Agda, prove these:
 
 1) Univalence
-2) BSP^s gauge invariance
+2) BSPˢ gauge invariance
 3) Monotonicity of canonical novelty
 4) Finiteness of semantic closure
 5) Existence of representation fixed points without termination
