--- a/in/in-27.md
+++ b/in/in-27.md
@@ -1,146 +1,155 @@
-# in-27: The Geometric Servo Architecture
+# in-27: The Geometric Servo (Holographic Architecture)
 
 | Metadata | Value |
-| :--- | :--- |
+| --- | --- |
 | **Status** | **Design Freeze Proposal** |
 | **Target** | Milestone `m5` (Autonomic Refactoring) |
 | **Baseline** | `m4` (Coordinates & Static Damage Metrics) |
 | **Author** | Lead Engineer (Implementation), Peer Review Board (Theory) |
 | **Type** | Design Change Request (DCR) |
+| **Glossary Compliance** | **BSPˢ** (§1), **Renormˢ** (§12), **Gauge** (§23), **Entropyₐ** (§28) |
 
 ---
 
 ## 1. Executive Summary
 
-We are formally abandoning the **"Linear Paging"** metaphor (Tiles as fixed pages) in favor of a **Fractal Geometric** model.
+We are abandoning the **"Linear Paging"** metaphor in favor of a **Geometric** model driven by **Canonical Interning**.
 
-The Prism VM will no longer be "tuned" by the Host via environment variables. Instead, it will implement an on-device **Autonomic Reflex Arc** that dynamically adjusts the granularity of memory sorting based on the **Hamming Entropy** of the active graph.
+The Prism VM will implement an on-device **Autonomic Reflex Arc** ("The Servo") that dynamically adjusts the **BSPˢ** (Binary Space Partitioning) granularity based on the **Entropyₐ** (Microstate Entropy) of the active graph.
 
-This shift moves the scheduler from a **Heuristic Manager** (Opcode-aware, Host-driven, Temporal) to a **Physical Force** (Opcode-agnostic, Kernel-driven, Spatial), guaranteeing optimal packing via the **2:1 Morton Recursion Invariant**.
+This architecture exploits the **Holographic Principle**: under canonical interning and Morton ordering, the *Address Space* acts as a low-dimensional projection of the *Data Topology*. This allows the scheduler to act as a **Physical Force** (opcode-agnostic), targeting optimal packing via the **2:1 Morton Recursion Invariant**.
 
-The core mechanism is a **Spatial Schmitt Trigger** ("The Lung") that uses geometric buffer pressure—rather than temporal momentum—to regulate the working set size.
+**Gauge Warning:** This architectural shift operates strictly within the **BSPˢ gauge** (spatial layout). It is a performance optimization (Renormˢ) that is explicitly **erased by the projection `q`**. It must commute with all denotational invariants (`q ∘ Servo = q`).
 
 ---
 
-## 2. Theoretical Delta: From Linear to Fractal
+## 2. Theoretical Definitions (Normative)
 
-### 2.1 The Metric Shift
-We replace "Faults" (Error counting) with "Entropy" (Energy measurement).
+### 2.1 The Metric Shift: Entropyₐ vs. Damageₛ
+We move from counting boundary crossings (Damage) to measuring geometric energy (Entropy).
 
-| Feature | Current Code Theory (`m4`) | New Geometric Theory (`m5`) |
-| :--- | :--- | :--- |
-| **Model** | **Linear Segmentation:** Memory is a tape divided into fixed-size chunks ($K$ slots). | **Recursive Hypercube:** Memory is a Z-Order curve filling a high-dimensional space. |
-| **Fault** | **Boundary Crossing:** "Damage" = Pointer $A \to B$ where $A // K \neq B // K$. | **Bit-Depth Tension:** "Energy" = $\text{MSB}(A \oplus B)$. The geometric scale of the edge. |
-| **Goal** | **Minimize Faults:** Keep pointers within the fixed tile. | **Minimize Entropy:** Shift the spectral center of mass to the lowest possible bit-dimension. |
+| Feature | `m4` (Linear) | `m5` (Holographic) |
+| --- | --- | --- |
+| **Model** | **Segmentation:** Memory is `N` fixed tiles. | **Hypercube:** Memory is a Z-order curve (**BSPˢ**). |
+| **Metric** | **Damageₛ:** % edges crossing `K`. | **Entropyₐ:** `H = sum(MSB(A XOR B))`. |
+| **Goal** | Minimize boundary faults. | Minimize the geometric moment of the graph. |
 
-### 2.2 The Scheduling Shift
-We replace "Reaction" (Time) with "Homeostasis" (Space).
+### 2.2 The Holographic Collapse (Gauge Property)
+**Axis:** BSPˢ (Spatial Layout)  
+**Erasure:** Erased by `q`
 
-| Feature | Current Code Theory (`m4`) | New Geometric Theory (`m5`) |
-| :--- | :--- | :--- |
-| **Agent** | **Host (Python):** Configures `tile_size` via env vars or restart. | **Device (JAX):** Adjusts `sort_mask` every cycle inside the XLA graph. |
-| **Input** | **Scalar Rate:** "10% damage." | **Vector Spectrum:** "High energy at Bit 9, Low energy at Bit 5." |
-| **Logic** | **Reactive:** "If damage > threshold, complain." | **Spatial Hysteresis:** "If buffer pressure > threshold, dilate. If active vacuum > threshold, contract." |
+We define "Holographic Collapse" as an operational property of the **BSPˢ** gauge:
+
+1. **Interning:** `Value_A == Value_B => ID_A == ID_B`.
+2. **Morton Map:** `Address_A = Morton(ID_A)`.
+3. **Collapse:** Structural proximity implies spatial proximity.
+
+This allows the scheduler to optimize **data layout** by optimizing **address entropy** (**Entropyₐ**), without inspecting the opcodes.
 
 ---
 
 ## 3. Implementation Specifications
 
 ### 3.1 State Augmentation (`Arena`)
-The `Arena` NamedTuple requires a dedicated tensor to store the autonomic state. This represents a breaking schema change.
+**Breaking Change:** The `Arena` tuple requires a dedicated tensor for the Autonomic State.
 
-**New Schema:**
 ```python
 class Arena(NamedTuple):
     # ... standard fields ...
-    
-    # [0]: Aperture Mask (uint32) - The current "Tile Size" bitmask
-    # [1]: Unused (Reserved for future RL)
-    # [2]: Unused (Reserved for future RL)
-    servo: jax.Array 
 
+    # [0]: Aperture Mask (uint32) - The current BSPˢ tile-size bitmask
+    # [1]: Reserved (Padding/Future)
+    # [2]: Reserved (Padding/Future)
+    servo: jax.Array
 ```
 
 ### 3.2 The Sensor: `_blind_spectral_probe`
 
-A vectorized kernel that computes the "Thermal Signature" of the graph topology.
+**Axis:** Read-only observer  
+**Commutation:** None (side-effect free)
 
-* **Input:** `ids`, `arg1`, `arg2`, `rank`.
-* **Logic:**
-1. **Filter:** Select only `RANK_HOT` nodes.
-2. **Geometry:** Compute Hamming Distance .
-3. **Magnitude:** Compute .
-4. **Aggregation:** `bincount(M, weights=is_hot)`.
+A vectorized kernel computing the "Thermal Signature" (**Entropyₐ**) of the graph.
 
-
-* **Output:** `float32[32]` (The Spectral Histogram).
-* **Constraint:** Must use `jax.lax.stop_gradient` to prevent AD overhead (we do not differentiate through the probe).
+* **Magnitude Logic:** `M = floor(log2(ID XOR Arg))`.
+* **Histogram:** `hist = bincount(M, weights=is_hot, length=32)`.
+* **Normalization:** `H[i] = hist[i] / (sum(hist) + epsilon)`. The output must be a probability distribution summing to 1.0.
+* **Constraint:** `jax.lax.stop_gradient` is required. The probe is an observer, not a differentiable operation.
 
 ### 3.3 The Controller: Spatial Hysteresis ("The Lung")
 
-A **memoryless** controller that acts as a Gauge Selector with a topological constraint.
+**Axis:** BSPˢ control  
+**Commutation:** `q(Lung(P)) = q(P)`
+
+A **memoryless** controller implementing a Spatial Schmitt Trigger.
+
+**Definitions:**
+
+* `K`: Current aperture bit (index 0..31).
+* `P_buffer`: Normalized **Entropyₐ** density in the Buffer Zone `[2^(K-1), 2^K)`.
+  * *Calculation:* `P_buffer = sum_{i=K-1..31} H[i]`
+* `D_active`: Normalized node density in the Active Zone `[0, 2^(K-1))`.
+  * *Calculation:* `D_active = Count(Active Nodes) / (2^(K-1))`
 
 **The Control Law:**
-Let  be the current Macro Scale (Aperture Bit).
-Let  be the energy density in the "Buffer" zone (Upper Hemisphere, ).
-Let  be the density in the "Active" zone (Lower Hemisphere, ).
 
-**Key Properties:**
+```
+K_{t+1} =
+  K + 1  if P_buffer > 0.25          (Spill Condition)
+  K - 1  if P_buffer ≈ 0 and D_active < 0.4  (Vacuum Condition)
+  K      otherwise                   (Guard Band)
+```
 
-1. **Zero Memory:** No EMA or momentum terms. The decision is a pure function of the instantaneous geometry.
-2. **Topological Latch:** Dilation instantly transforms the "Buffer" into the "Active" zone of the next scale, mathematically preventing oscillation.
-3. **Guard Band:** Inside the safe region, the system is perfectly elastic.
+**Stability Invariant:** The guard band is the region where the system is **elastic**. No changes to `K` occur here. This dampens oscillation without temporal averaging.
 
-### 3.4 The Actuator: Masked Morton Sorting
+### 3.4 The Actuator: Masked Stable Sort (Renormˢ)
 
-We simulate variable-size tiles using bit-masking to avoid JIT recompilation.
+**Axis:** BSPˢ (spatial renormalization)  
+**Commutation:** `q(Sort(P)) = q(P)` (Glossary §12)
 
 * **Logic:** `key = morton_code(ids) & servo_mask`
-* **Effect:** Nodes within the masked window share an identical key. A **Stable Sort** preserves their relative order, treating them as a single "Super-Particle."
-* **Result:** The sorting kernel acts as a "Coarse-Graining" function, dynamically adjusting its resolution to match the graph's entropy.
+* **Stability Requirement:** The sort **must be stable**. Nodes falling within the same masked bucket (“Super-Particle”) must retain their relative temporal order to preserve local caches.
+* **Implementation Strategy:** `jax.lax.sort` is unstable by default on GPU; the implementation must use a composite key `(masked_key, original_index)` to break ties deterministically.
 
 ---
 
-## 4. The Blind Packing Invariant
+## 4. The Blind Packing Design Target (Haar/Z-Order)
 
-The architecture guarantees optimal packing efficiency without semantic awareness (Opcodes), relying on the **Haar Wavelet** properties of the Z-Order Curve.
+We target **opcode-agnostic packing** efficiency, leveraging the geometry of the Z-curve.
 
-### 4.1 The 2:1 Containment Proof
+### 4.1 The 2:1 Containment Lemma
 
-* The Macro Tile (Hardware Scan Unit) has size .
-* The Servo selects an Aperture  (where ).
-* Therefore, the Macro Tile contains exactly  Super-Particles.
-* **Result:** Zero alignment waste. The packing is strictly hierarchical.
+* **Premise:** The Z-order curve (**BSPˢ**) is constructed by recursive subdivision.
+* **Property:** Any aligned interval of size `2^N` (a Macro Tile) is strictly composed of two aligned intervals of size `2^(N-1)`.
+* **Implication:** A “Super-Particle” of size `2^k` (created by the aperture mask) fits **without remainder** into any slot of size `2^N` (where `k <= N`).
 
-### 4.2 The Vacuum Fill Guarantee
+### 4.2 The Vacuum Fill Corollary
 
-* Because dimensions are alternating (Morton), a large object (size ) occupies a contiguous aligned range .
-* The sibling range  is strictly empty relative to that object.
-* The Sorter, seeing "Vacuum" in the sibling range, pulls any other Super-Particle (size ) into that slot.
-* **Result:** Large logic ("Rocks") and small logic ("Gravel") automatically interleave to achieve 100% scan utilization.
+* **Premise:** A large structure (size `2^k`) occupies the lower half of a `2^(k+1)` block.
+* **Property:** The upper half (sibling) is a contiguous, aligned void of size `2^k`.
+* **Implication:** The sorter (Renormˢ), minimizing **Entropyₐ**, will naturally slide any other object of size `<= 2^k` into that void.
+* **Result:** High scan utilization is achievable via “Blind Tetris,” strictly due to the dyadic dimensions of Morton Space.
 
 ---
 
 ## 5. Verification Plan
 
-The `m5` milestone is gated by the following test protocol:
+The `m5` milestone is gated by strict numeric assertions and glossary compliance checks.
 
-1. **`test_spectral_probe.py`:**
-* Synthesize a perfect binary tree of depth 10.
-* Assert the Probe reports a clean histogram peaking at bit 10.
-* Synthesize random noise.
-* Assert the Probe reports high entropy across all bits.
+### 5.1 Probe Fidelity (`test_spectral_probe.py`)
 
+* **Synthesis:** Generate a perfect binary tree of depth 10.
+* **Assertion:** `H[10] > 0.8`. (Energy must concentrate at the geometric scale).
+* **Synthesis:** Generate random noise.
+* **Assertion:** `Entropy(H) = -sum(H[i] * log2(H[i])) > 3.0` bits. (**Entropyₐ** must be high/smeared).
 
-2. **`test_lung_capacity.py` (The Spatial Trigger):**
-* **Setup:** Aperture . Active Zone full.
-* **Step 1 (Spill):** Inject nodes into the Buffer Zone (). Assert Servo **Dilates** to .
-* **Step 2 (Drain):** Remove nodes until Active Density . Assert Servo **Contracts** to .
-* **Step 3 (Guard):** Inject nodes into Buffer (). Assert Servo **Holds** state (Elasticity).
+### 5.2 Controller Dynamics (`test_lung_capacity.py`)
 
+* **Guard Band Check:** Inject spill `P_buffer < 0.1`. Assert `K_{t+1} == K_t`.
+* **Dilation Check:** Inject spill `P_buffer > 0.25`. Assert `K_{t+1} == K_t + 1`.
+* **Contraction Check:** Empty Active Zone (`D_active < 0.4`). Assert `K_{t+1} == K_t - 1`.
 
-3. **`test_blind_packing.py`:**
-* Create 1 Large Object (512 nodes) and 512 Small Objects (1 node).
-* Run `vm.cycle`.
-* **Pass Condition:** `damage_rate` drops to 0. The Large Object occupies `[0-511]`. The Small Objects occupy `[512-1023]`. The Servo finds the perfect fit without knowing opcodes.
+### 5.3 Packing Efficiency (`test_blind_packing.py`)
 
+* **Setup:** 1 large object (512 nodes), 512 small objects (1 node).
+* **Primary Assertion (Entropy):** `Entropy(H) < 1.5` bits. (The system effectively found the 2 clusters).
+* **Secondary Assertion (Legacy):** `damage_rate(tile=512) < 0.01`. (Legacy metric confirms minimal boundary crossings).
