m5: add servo invariance checks

--- a/in/in-27.md
+++ b/in/in-27.md
@@ -63,6 +63,8 @@ class Arena(NamedTuple):
     servo: jax.Array
 ```
 
+**Enablement Gate:** The servo must be **disabled** outside m5. Implementations should gate it behind `PRISM_ENABLE_SERVO` or `PRISM_MILESTONE >= 5` and default to off in earlier milestones.
+
 ### 3.2 The Sensor: `_blind_spectral_probe`
 
 **Axis:** Read-only observer  
