docs: align servo invariance

--- a/in/in-27.md
+++ b/in/in-27.md
@@ -155,3 +155,8 @@ The `m5` milestone is gated by strict numeric assertions and glossary compliance
 * **Setup:** 1 large object (512 nodes), 512 small objects (1 node).
 * **Primary Assertion (Entropy):** `Entropy(H) < 1.5` bits. (The system effectively found the 2 clusters).
 * **Secondary Assertion (Legacy):** `damage_rate(tile=512) < 0.01`. (Legacy metric confirms minimal boundary crossings).
+
+### 5.4 BSPˢ Gauge Invariance (Servo)
+
+* **Denotation Invariance:** `test_servo_denotation_invariance` (servo on/off yields identical denotation).
+* **Stable Tie-Break:** `test_servo_sort_stable_tiebreaker` (equal masked keys preserve index order).
