Document banded milestone testing and update audits

--- a/in/in-15.md
+++ b/in/in-15.md
@@ -24,15 +24,20 @@ plan's acceptance criteria to be executable.
 We use:
 
 - Markers: `m1`, `m2`, `m3`, `m4`, `m5`
-- A gate in `conftest.py` that skips tests above the selected milestone
-- Per-milestone pytest configs: `pytest.m1.ini` .. `pytest.m5.ini`
+- A gate in `conftest.py` that can select either:
+  - **Inclusive mode** (<= milestone) via `--milestone`, or
+  - **Banded mode** (exact band) via `--milestone-band`
+- Per-milestone pytest configs: `pytest.m1.ini` .. `pytest.m5.ini` (banded)
 
 Example:
 
-- `pytest -c pytest.m2.ini` runs only tests marked `m1` or `m2`
-- `pytest -c pytest.m4.ini` runs `m1`..`m4`, and skips `m5`
+- `pytest -c pytest.m2.ini` runs **only** tests marked `m2`
+- `pytest -c pytest.m1.ini` runs tests marked `m1` **plus** unmarked tests
+- Running `m1` → `m5` in order runs the full suite without rerunning tests
+- Inclusive mode is still available: `pytest --milestone=m2` runs `m1` + `m2`
 
-This matches the plan's "acceptance gates" directly.
+This matches the plan's "acceptance gates" directly, while allowing
+banded runs for faster full-suite coverage.
 
 ---
 
@@ -42,7 +47,7 @@ VS Code's Testing panel only shows what pytest discovers. We make milestone
 selection deterministic by setting the milestone in an env file that the
 pytest gate reads during discovery.
 
-Workflow:
+Workflow (inclusive, default):
 
 1) Edit `.vscode/pytest.env`:
 
@@ -64,8 +69,16 @@ Under the hood:
 - If the env is not propagated by the IDE, `conftest.py` falls back to reading
   `.pytest-milestone` (one token like `m2`) or `.vscode/pytest.env`.
 
-This makes VS Code's test list mirror the milestone gate, without a manual
-command line step.
+This makes VS Code's test list mirror the inclusive milestone gate, without a
+manual command line step.
+
+If you want **banded** selection in VS Code, set:
+
+```
+PYTEST_ADDOPTS=--milestone-band=m2
+```
+
+(Use `--include-unmarked` when running the `m1` band.)
 
 ---
 
@@ -73,8 +86,10 @@ command line step.
 
 At any milestone:
 
-- All tests *at or below* the milestone are expected to pass.
-- Tests beyond the milestone are skipped by the gate.
+- Inclusive mode: all tests *at or below* the milestone must pass.
+- Banded mode: only the selected band runs (plus unmarked if explicitly included).
+- Unmarked tests must be assigned to their earliest supported milestone; `m1`
+  is the only band that includes them by default.
 - No xfail guards are used to "bless failures."
 
 This makes the milestone gate a formal contract, not a convenience flag.
@@ -96,13 +111,17 @@ As a result, "milestone complete" becomes a testable, tool-supported state.
 
 ## 6) Quick reference
 
-CLI:
+CLI (banded):
 
 - `pytest -c pytest.m1.ini`
 - `pytest -c pytest.m2.ini`
 - `pytest -c pytest.m3.ini`
 - `pytest -c pytest.m4.ini`
 - `pytest -c pytest.m5.ini`
+
+CLI (inclusive):
+
+- `pytest --milestone=m2`
 
 VS Code:
 
