Add baseline pytest suite and CI gating

--- a/in/in-15.md
+++ b/in/in-15.md
@@ -27,12 +27,12 @@ We use:
 - A gate in `conftest.py` that can select either:
   - **Inclusive mode** (<= milestone) via `--milestone`, or
   - **Banded mode** (exact band) via `--milestone-band`
-- Per-milestone pytest configs: `pytest.m1.ini` .. `pytest.m5.ini` (banded)
+- Per-milestone pytest configs: `pytest.baseline.ini`, `pytest.m2.ini` .. `pytest.m5.ini` (banded)
 
 Example:
 
 - `pytest -c pytest.m2.ini` runs **only** tests marked `m2`
-- `pytest -c pytest.m1.ini` runs tests marked `m1` **plus** unmarked tests
+- `pytest -c pytest.baseline.ini` runs tests marked `m1` **plus** unmarked tests
 - Running `m1` → `m5` in order runs the full suite without rerunning tests
 - Inclusive mode is still available: `pytest --milestone=m2` runs `m1` + `m2`
 
@@ -113,7 +113,7 @@ As a result, "milestone complete" becomes a testable, tool-supported state.
 
 CLI (banded):
 
-- `pytest -c pytest.m1.ini`
+- `pytest -c pytest.baseline.ini`
 - `pytest -c pytest.m2.ini`
 - `pytest -c pytest.m3.ini`
 - `pytest -c pytest.m4.ini`
