Add doc front-matter re-internment signal

--- a/in/in-10.md
+++ b/in/in-10.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 NOTE: CONSOLIDATED by in-13.md; CD coordinates are made self-hosted in in-11.md.
 
 Perfect. Here is a **clean, engineering-grade technical diff** you can use as a milestone definition. It is written so that:
