--- a/in/in-11.md
+++ b/in/in-11.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 NOTE: CONSOLIDATED by in-13.md; acceptance criteria are reflected in IMPLEMENTATION_PLAN.md.
 
 Yes — this closes the loop cleanly, and as a reviewer/engineer I would now say: **Milestone Δ is no longer speculative; it is mechanically well-founded.** What you’ve articulated is exactly the missing representational commitment that makes all earlier claims true *by construction*.
