--- a/in/in-15.md
+++ b/in/in-15.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 NOTE: Implemented via tests/conftest.py and documented in IMPLEMENTATION_PLAN.md; this note records the workflow.
 
 This note formalizes **milestone-gated testing** and the **VS Code workflow**
