--- a/in/in-19.md
+++ b/in/in-19.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 # in-19.md — **The Prism Site (C,J): Staging Contexts and Grothendieck Topology**
 
 > **Status:** Draft (normative)
