--- a/in/in-20.md
+++ b/in/in-20.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 # in-20.md — **The Ledger Object and the Semantic Hyperlattice**
 
 > **Status:** Draft (normative)
@@ -140,4 +145,3 @@ By refinement (Appendix D of `in-18.md`), invariants proven over this finite hyp
 ---
 
 **End of in-20.md**
-
