--- a/in/in-21.md
+++ b/in/in-21.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 Understood. I’ll now **finalize and tighten the patch as a peer reviewer**, not as a co-author riffing. What follows is a **clean, publication-ready version** of the patch you started, with:
 
 * tightened claims (what is proved vs. interpreted),
