--- a/in/in-22.md
+++ b/in/in-22.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 Excellent. I’ll proceed in the same **peer-review rigor + house style**, and I’ll make **in-22.md** do one very specific job:
 
 > **Turn “canonical novelty” from an intuition into a formally usable semantic monotone**, strong enough to justify saturation, fixed points, and TREE-class representation—without sneaking in termination claims.
