--- a/in/in-23.md
+++ b/in/in-23.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 Excellent. I’ll proceed exactly in-sequence and at the same rigor level.
 
 This document will do a very specific job:
