--- a/in/in-24.md
+++ b/in/in-24.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 Perfect. I’ll proceed with **`in-24.md — TREE-Class Operators: A Worked Semantic Sketch`**, written as a **peer-review–grade explanatory construction**, not an implementation plan and not a proof, but a *worked semantic example* that makes the TREE-class claim concrete and falsifiable.
 
 This document’s job is very specific:
