--- a/in/in-25.md
+++ b/in/in-25.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 Excellent. This is the **right capstone** for the sequence: it draws a clean, defensible boundary between two traditions that are often conflated, and it explains *why Prism deliberately does not play the ordinal game* while still handling TREE-class phenomena.
 
 Below is a **publication-ready `in-25.md`**, written in the same **normative, lemma-driven, reviewer-facing style** as the previous documents. It is careful about claims, explicit about non-claims, and pre-empts the most obvious objections from proof theorists and rewriting theorists.
