--- a/in/in-26.md
+++ b/in/in-26.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 Below is a concrete, reviewer-facing proposal of what to formalize in Agda,
 structured as a proof roadmap rather than a grab-bag of lemmas. The goal is
 to maximize semantic leverage per proof hour and to respect Prism's
