--- a/in/in-12.md
+++ b/in/in-12.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 NOTE: CONSOLIDATED by in-13.md; univalence contract formalized in IMPLEMENTATION_PLAN.md.
 
 Yes—event sourcing + CQRS is basically the *right mental model* for “strong canonicality without ambiguity,” and it also explains why the vtable analogy is so apt.
