--- a/in/in-14.md
+++ b/in/in-14.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 NOTE: Incorporated into IMPLEMENTATION_PLAN.md; this document remains the rationale and reconciliation pass.
 
 This is a strong plan. The main thing to tighten is **the separation of semantic spine vs. performance spine**, and to make **univalence** a first-class invariant (with explicit “what constitutes a key” and “what constitutes equality” written down once and reused everywhere).
