--- a/in/in-27.md
+++ b/in/in-27.md
@@ -1,3 +1,8 @@
+---
+doc_revision: 1
+reader_reintern: "Reader-only: re-intern if doc_revision changed since you last read this doc."
+---
+
 # in-27: The Geometric Servo (Holographic Architecture)
 
 | Metadata | Value |
